update aan betalen folder

--- a/Betalen/index.html
+++ b/Betalen/index.html
@@ -10,6 +10,10 @@
 
 </head>
 <body>
-    
+<form>
+    <input type="text" id="Test1" value="Naam"> &nbsp;&nbsp; <input type="text" id="Test2" value="Banknummer"></input> <br>
+
+
+</form>
 </body>
 </html>
