--- a/Menu/Index.html
+++ b/Menu/Index.html
@@ -15,10 +15,36 @@
 
 <header>
 
-    <div id="header">
-        <img src="../Images/3sprong_restaurant_header.png" id="sprong">
+    <div>
+        <img src="../Images/3sprong_restaurant_header1.png" id="sprong">
     </div>
     
+    <div id="Menu1" class="boxes">
+        
+    </div>
+
+    <div id="Menu2" class="boxes">
+
+    </div>
+
+    <div id="Menu3" class="boxes">
+
+    </div>
+
+    <div id="Menu4" class="boxes">
+
+    </div>
+
+    <div id="Menu5" class="boxes">
+
+    </div>
+
+    <div id="Menu6" class="boxes">
+
+    </div>
+
+
+
 </header>
 
 
