Code Header + Logo 3 sprong

--- a/Betalen/index.html
+++ b/Betalen/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="Betalen.css">
+    <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
 
 </head>
 <body>
