--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Bestellen.css">
+    <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
 </head>
 <body>
     <form>
