--- a/Betalen/index.html
+++ b/Betalen/index.html
@@ -11,6 +11,39 @@
 
 </head>
 <body>
+    
+    <header>
+
+        <div id="logobox"></div>
+        <img src="../Images/logo_de3sprong.png" id="logo">
+
+        <img src="../Images/3sprong_restaurant_header1.png" id="sprong">
+
+        <div id="Menu1" class="boxes">
+            <H2 class="textmenu">Home</H2>
+        </div>
+
+        <div id="Menu2" class="boxes">
+            <H2 class="textmenu">Menu</H2>
+        </div>
+
+        <div id="Menu3" class="boxes">
+            <H2 class="textmenu">About</H2>
+        </div>
+
+        <div id="Menu4" class="boxes">
+            <H2 class="textmenu">Reserveren</H2>
+        </div>
+
+        <div id="Menu5" class="boxes">
+            <H2 class="textmenu">Bestellen</H2>
+        </div>
+
+        <div id="Menu6" class="boxes">
+            <h2 class="textmenu">Contacteren</h2>
+        </div>
+        <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>
+    </header>
 <form>
     <input type="text" id="Test1" value="Naam"> &nbsp;
     
