--- a/About/index.html
+++ b/About/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="About.css">
 </head>
 <body>
-    <!--header-->
 
 <header>
 
@@ -44,10 +43,9 @@
 </header>
     <div id="tekst">
     <h1>Restaurant de 3sprong</h1>
-    <h3>Kruinweg 3 6369 TZ Simpelveld</h3>
-    <h3>Telefoom: + 31 (0)45 - 544 60 05</h3>
-    <h3>E-mail: info@restaurantde3sprong.nl</h3>
-    <h3>Wij ontvangen u graag voor koffie, lunch of diner in ons restaurant of op het terras!</h3>
+    <h3>De 3Sprong is gelegen op de grens van het Zuid-Limburgse Mergelland en het Heuvelland, aan de rand van het dorp Simpelveld.</h3>
+    <h3>Ons restaurant/terras ligt bij het bungalowpark Groenpark Simpelveld en het, nog in ontwikkeling zijnde, Resort Heuvelland.</h3>
+    <h3>Het is slechts enkele minuten rijden vanaf de afslag Simpelveld (A76) en vlakbij de grensovergang Bocholtz/Aken (Duitsland).</h3>
     <h1>Openingstijden</h1>
     <h3>Vrijdag, zaterdag, zondag en maandag vanaf 12:00 uur</h3>
     <h3>Dinsdag en woensdag gesloten</h3>
