--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -43,7 +43,7 @@
             <div id="Menu6" class="boxes">
                 <h2 class="textmenu">Contacteren</h2>
             </div>
-            <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>
+            <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>    <br>
         </header>
         <form>
           <input type="text" id="Test1" value="Naam bestelling" size="50"> &nbsp;
@@ -54,8 +54,7 @@
             <br> <br>
             <input type="text" id="Test1" value="Prijs product" size="50"> &nbsp;
             <br> <br> 
-    
-
+            <button type="submit"><a href="../Betalen/index.html">Confirm</a></button>
     </form>
 </body>
 
