--- a/Contacteren/index.html
+++ b/Contacteren/index.html
@@ -41,6 +41,18 @@
         </div>
     
     </header>  
+    <div id="tekstbox" >
+        <h1>Restaurant de 3Sprong</h1>
+        <h3><b>&dArr;</b>Hier ziet u onze locatie en kunt u ons contacteren<b>&dArr;</b></h3> 
+        <br>
+        <h3>Kruinweg 3    6369 TZ Simpelveld</h3>
+        <br>
+        <h3>Telefoon: + 31 (0)45 - 544 60 05</h3>
+        <br>
+        <h3>E-mail: info@restaurantde3sprong.nl</h3>
+    </div>
+
+    <a href="#" class="fa fa-facebook"></a>
 
 
 
