--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -47,7 +47,11 @@
         </header>
         <form>
           <input type="text" id="Test1" value="Naam bestelling" size="50"> &nbsp;
-            <input type="text" id="Test1" value="Gekozen gerecht" size="50"> &nbsp;
+          <select>
+            <option value="Gekozen gerecht">Gekozen gerecht</option>
+            <option value="gerecht 1">Gerecht 1</option>
+            <option value="gerecht 2">Gerecht 2</option>
+        </select>
             <br><br>
             <input type="text" id="Test1" value="Locatie bestelling" size="50"> &nbsp;
             <input type="text" id="Test1" value="Aankomst bestelling"size="50"> &nbsp;
