--- a/Reserveren/index.html
+++ b/Reserveren/index.html
@@ -42,7 +42,7 @@
           <label for="psw-repeat"><b>Voor wanneer?</b></label>
           <input type="text" placeholder="Vul in voor wanneer u wilt reserveren." name="psw-repeat" id="psw-repeat" required>
           <label for="opmerkingen"><b>Opmerkingen</b></label>
-          <input type="text" placeholder="Vul hier iets in als je opmerkingen hebt." name="password" id="password">
+          <input type="text" placeholder="Opmerkingen bijv. allergiën, gluten etc." name="password" id="password">
           <hr>
           <button type="submit" class="registerbtn">Reserveren</button>
         </div>
