--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -46,26 +46,21 @@
         </header>
         <div id="tekstbox" >
             <div class="container">
-                <input type="text" id="Test1" value="Naam bestelling" size="50"> &nbsp;
-                <select>
-                  <option value="Gekozen gerecht">Gekozen gerecht</option>
+                <input type="text" id="Test1" placeholder="Naam bestelling" size="50" required> &nbsp;
+                <select required>
+                  <option value="Gekozen gerecht">Kies een gerecht</option>
                   <option value="gerecht 1">Gerecht 1</option>
                   <option value="gerecht 2">Gerecht 2</option>
               </select>
                   <br><br>
-                  <input type="text" id="Test1" value="Locatie bestelling" size="50"> &nbsp;
-                  <input type="text" id="Test1" value="Aankomst bestelling"size="50"> &nbsp;
+                  <input type="text" id="Test1" placeholder="Locatie bestelling" size="50" required> &nbsp;
+                  <input type="text" id="Test1" placeholder="Aankomst bestelling"size="50" required> &nbsp;
                   <br> <br>
-                  <input type="text" id="Test1" value="Prijs product" size="50"> &nbsp;
+                  <input type="text" id="Test1" placeholder="Prijs product" size="50" required> &nbsp;
                   <br> <br> 
-                  <button type="submit"><a href="../Betalen/index.html">Confirm</a></button>
-              
-
+                <input type="submit" type="button">
                 </form>
               </div>
         </div>
-
-</body>
-
 </body>
 </html>
