--- a/Menu/Drankkaart/index.html
+++ b/Menu/Drankkaart/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="About.css">
+    <title>Drankkaart</title>
+    <link rel="stylesheet" href="Drank.css">
     <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
 </head>
 <body>
-<header>
     <div id="logobox"></div>
     <img src="../Images/logo_de3sprong.png" id="logo">
     <img src="../Images/3sprong_restaurant_header1.png" id="sprong">
@@ -32,17 +31,6 @@
         <h2 class="textmenu">Contacteren</h2>
     </div>
 </header>
-    <div id="tekst">
-    <h1>Restaurant de 3sprong</h1>
-    <h3>De 3Sprong is gelegen op de grens van het Zuid-Limburgse Mergelland en het Heuvelland, aan de rand van het dorp Simpelveld.</h3>
-    <h3>Ons restaurant/terras ligt bij het bungalowpark Groenpark Simpelveld en het, nog in ontwikkeling zijnde, Resort Heuvelland.</h3>
-    <h3>Het is slechts enkele minuten rijden vanaf de afslag Simpelveld (A76) en vlakbij de grensovergang Bocholtz/Aken (Duitsland).</h3>
-    <h1>Openingstijden</h1>
-    <h3>Vrijdag, zaterdag, zondag en maandag vanaf 12:00 uur</h3>
-    <h3>Dinsdag en woensdag gesloten</h3>
-    <h3>Donderdag vanaf 12:00 uur open</h3>
-    <h3>Keuken geopend tot 20:00 uur - lunchkaart 12:00 tot 16:00 uur - A la carte vanaf 12:00 uur</h3>
-    <h3>Voor dineren in het weekend adviseren we u om te <u>reserveren</u> om teleurstelling te voorkonen.</h3>
-    </div>
+    
 </body>
 </html>
