--- a/Reserveren/index.html
+++ b/Reserveren/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserveren</title>
     <link rel="stylesheet" href="Reserveren.css">
+    <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
 </head>
 <body>
     <header>
