--- a/Menu/Drankkaart/index.html
+++ b/Menu/Drankkaart/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drankkaart</title>
     <link rel="stylesheet" href="Drank.css">
-    <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
+    <link rel="icon" type="png" href="../../Images/logo_de3sprong.png">
 </head>
 <body>
     <div id="logobox"></div>
-    <img src="../Images/logo_de3sprong.png" id="logo">
-    <img src="../Images/3sprong_restaurant_header1.png" id="sprong">
+    <img src="../../Images/logo_de3sprong.png" id="logo">
+    <img src="../../Images/3sprong_restaurant_header1.png" id="sprong">
     <div id="Menu1" class="boxes">
         <H2 class="textmenu">Home</H2>
     </div>
@@ -31,6 +31,6 @@
         <h2 class="textmenu">Contacteren</h2>
     </div>
 </header>
-    
+    <div id="back"></div>
 </body>
 </html>
