--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -14,11 +14,12 @@
 <body>
 
         <header>
+            <form action="/action_page.php">
             <div id="logobox"></div>
             <img src="../Images/logo_de3sprong.png" id="logo">
             
             <img src="../Images/3sprong_restaurant_header1.png" id="sprong">
-        
+
         <a href="../Home/Index.html">
             <div id="Menu1" class="boxes">
                 <H2 class="textmenu">Home</H2>
@@ -59,14 +60,15 @@
                   <option value="gerecht 2">Gerecht 2</option>
               </select>
                   <br><br>
-                  <input type="text" id="Test1" placeholder="Locatie bestelling" size="50" required> &nbsp;
-                  <input type="text" id="Test1" placeholder="Aankomst bestelling"size="50" required> &nbsp;
+                  <input type="text" id="Test1" placeholder="Locatie bestelling.." size="50" required> &nbsp;
+                  <input type="text" id="Test1" placeholder="Aankomst bestelling.."size="50" required> &nbsp;
                   <br> <br>
-                  <input type="text" id="Test1" placeholder="Prijs product" size="50" required> &nbsp;
+                  <input type="text" id="Test1" placeholder="Prijs product.." size="50" required> &nbsp;
                   <br> <br> 
                 <input type="submit" type="button">
                 </form>
               </div>
         </div>
-</body>
+    </form>
+    </body>
 </html>
