--- a/Menu/Drankkaart/index.html
+++ b/Menu/Drankkaart/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="png" href="../../Images/logo_de3sprong.png">
 </head>
 <body>
+    <div class="banner"></div>
 
     <div id="logobox"></div>
     <img src="../../Images/logo_de3sprong.png" id="logo">
@@ -39,6 +40,6 @@
     </div>
 
 </header>
-    <div id="back"></div>
+
 </body>
 </html>
