--- a/Contacteren/index.html
+++ b/Contacteren/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacteren</title>
     <link rel="stylesheet" href="Contacteren.css">
+    <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
 </head>
 <body>
     <!--header-->
