--- a/Home/Index.html
+++ b/Home/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepagina</title>
     <link rel="stylesheet" href="Home.css">
+    <link rel="icon" type="png" href="../Images/logo_de3sprong.png">
 </head>
 <body>
     <!--header-->
