Menu pagina update (V 3)

--- a/Menu/Diner menu/Index.html
+++ b/Menu/Diner menu/Index.html
@@ -33,7 +33,7 @@
             <div class="dropdown-content">
                 <a href="../Diner menu/Index.html"></a>
                 <a href="../Lunch menu/Index.html"></a>
-                <a href=""></a>
+                <a href="../Drankkaart/index.html"></a>
             </div>
         </div>
 
@@ -86,6 +86,8 @@
 <div class="Menuboxenspec" id="Menubox5">
     
 </div>
+
+<h1 id="spectext">------------------ Specials ------------------</h1>
 
 <img src="../../Images/Flag_of_South_Africa.png" alt="South Africa" id="South_Africa">
 
