--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -134,8 +134,8 @@
 
               </select>
                   <br><br>
-                  <input type="text" id="Test1" placeholder="Locatie bestelling.." size="50" required> &nbsp;
-                  <input type="date" placeholder="Aankomst bestelling.."size="50" required> &nbsp;
+                  <input type="text" id="Test1" placeholder="0000AA, Straatnaam, Huisnummer." size="50" required> &nbsp;
+                  <input type="datetime-local" placeholder="Aankomst bestelling.."size="50" required> &nbsp;
                   <br> <br>
 
                 <input type="submit" type="button">
