--- a/Betalen/index.html
+++ b/Betalen/index.html
@@ -14,7 +14,7 @@
 <body>
 
         <header>
-            <form action="/action_page.php">
+            <form>
             <div id="logobox"></div>
             <img src="../Images/logo_de3sprong.png" id="logo">
             
@@ -53,18 +53,9 @@
         </header>
         <div id="tekstbox" >
             <div class="container">
-                <select>
-                    <option>bank1</option>
-                    <option>bank2</option>
-                    <option>bank3</option>
-                </select> &nbsp;
-                  <br><br>
-                  <input type="text" id="Test1" placeholder="" size="50" required> &nbsp;
-                  <input type="text" id="Test1" placeholder="Aankomst bestelling.."size="50" required> &nbsp;
-                  <br> <br>
-                  <input type="text" id="Test1" placeholder="Prijs product.." size="50" required> &nbsp;
-                  <br> <br> 
-                <input type="submit" type="button">
+                <a><button>Paypall</button></a>
+                <a><button>Ideal</button></a>
+                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiCtsSXp577AhXZgP0HHW25ArkQFnoECA8QAw&url=https%3A%2F%2Fprogramminghead.com%2Fsubmit-button-redirect-to-another-page-in-html&usg=AOvVaw37cnWcDQ0eQLPOl6Tc8aUt"><button>Tikkie</button></a>
                 </form>
               </div>
         </div>
