--- a/Reserveren/index.html
+++ b/Reserveren/index.html
@@ -46,6 +46,7 @@
           <input type="text" placeholder="Opmerkingen bijv. allergiën, gluten etc." name="password" id="password">
           <hr>
           <button type="submit" class="registerbtn">Reserveren</button>
+          <button type="reset" class="button" value="Reset">Reset</button>
         </div>
       </form>
 </body>
