--- a/Contacteren/index.html
+++ b/Contacteren/index.html
@@ -74,7 +74,11 @@
               <textarea id="subject" name="subject" placeholder="Type Hier.." style="height:200px"></textarea required>
           
               <input type="submit" value="Submit">
+              <br>
+              <button type="reset" value="Reset">Reset</button>
             </form>
+
+
           </div>
     </div>
 
