--- a/Betalen/index.html
+++ b/Betalen/index.html
@@ -14,7 +14,7 @@
 <body>
 
         <header>
-            <form>
+            <form action="/action_page.php">
             <div id="logobox"></div>
             <img src="../Images/logo_de3sprong.png" id="logo">
             
@@ -55,7 +55,7 @@
             <div class="container">
                 <a><button>Paypall</button></a>
                 <a><button>Ideal</button></a>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiCtsSXp577AhXZgP0HHW25ArkQFnoECA8QAw&url=https%3A%2F%2Fprogramminghead.com%2Fsubmit-button-redirect-to-another-page-in-html&usg=AOvVaw37cnWcDQ0eQLPOl6Tc8aUt"><button>Tikkie</button></a>
+                <a><button>Tikkie</button></a>
                 </form>
               </div>
         </div>
