--- a/Reserveren/index.html
+++ b/Reserveren/index.html
@@ -39,7 +39,7 @@
           <label for="naam"><b>Naam</b></label>
           <input type="text" placeholder="Vul je naam in." name="naam" id="naam" required>
           <label for="email"><b>E-mail</b></label>
-          <input type="text" placeholder="Vul je e-mail in." name="email" id="email" required>
+          <input type="email" placeholder="Vul je e-mail in." name="email" id="email" required>
           <label for="psw-repeat"><b>Voor wanneer?</b></label>
           <input type="text" placeholder="Vul in voor wanneer u wilt reserveren." name="psw-repeat" id="psw-repeat" required>
           <label for="opmerkingen"><b>Opmerkingen</b></label>
