--- a/Menu/Diner menu/Index.html
+++ b/Menu/Diner menu/Index.html
@@ -79,7 +79,7 @@
 
 <div class="Menuboxenspec" id="Menubox3">
     <img src="../../Images/Eten/Verkoek.jpg" alt="" width="150px;">
-    <h4>Vetkoek: Vetkoek is very similar to the Dutch currant oliebol.</h4>
+    <h4>Vetkoek: Vetkoek is very similar to the Dutch current oliebol.</h4>
 </div>
 
 <div class="Menuboxenspec" id="Menubox4">
