--- a/Betalen/index.html
+++ b/Betalen/index.html
@@ -62,9 +62,9 @@
     </header>
         <div id="tekstbox" >
             <div class="container">
-                <a><button>Paypall</button></a>
-                <a><button>Ideal</button></a>
-                <a><button>Tikkie</button></a>
+                <img src="../Images/betalen/Paypal.png" width="100px" height="auto" >
+                <img src="../Images/betalen/Ideal.png" width="100px" height="auto">
+                <img src="../Images/betalen/Tikkie.png" width="100px" height="auto">
                 </form>
               </div>
         </div>
