--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -146,7 +146,7 @@
                   <input type="datetime-local" placeholder="Aankomst bestelling.."size="50" required> &nbsp;
                   <br> <br>
 
-                <input type="submit" type="button">
+                <a href="../Betalen/index.html"><input type="submit" type="button"></a>
                 </form>
               </div>
         </div>
