--- a/Bestellen/index.html
+++ b/Bestellen/index.html
@@ -62,6 +62,7 @@
     </header>
         <div id="tekstbox" >
             <div class="container">
+                <form action="/action_page.php"></form>
                 <input type="text" id="Test1" placeholder="Naam bestelling" size="50" required> &nbsp;
                 <select required>
                   <option value="Gekozen gerecht" >Kies een gerecht</option>
